# cpse2

./: .gitignore  CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main
V2CPSE2-msvc-01/: V2CPSE2-msvc.sln  cleanup.py
V2CPSE2-msvc-01/00-V2CPSE2-SFML-win32-static/: 00-V2CPSE2-SFML-win32-static.vcxproj
V2CPSE2-msvc-01/01-01 hello world/: 01-01 hello world.vcxproj  main.cpp
V2CPSE2-msvc-01/01-02 static ball/: 01-02 static ball.vcxproj  01-02 static ball.vcxproj.filters  ReadMe.txt  ball.cpp  ball.hpp  main.cpp
V2CPSE2-msvc-01/01-03 movable ball/: 01-03 movable ball.vcxproj  ball.cpp  main.cpp
V2CPSE2-msvc-01/02-01 undefined behaviour/: 02-01 undefined behaviour.vcxproj  main.cpp
V2CPSE2-msvc-01/03-01 array of deltas/: 03-01 array of deltas.vcxproj  ball.hpp  main.cpp
V2CPSE2-msvc-01/03-02 lambdas/: 03-02 lambdas.vcxproj  main.cpp
V2CPSE2-msvc-01/03-03 function wraps constructor/: 03-03 function wraps constructor.vcxproj  main.cpp
V2CPSE2-msvc-01/03-04 std function/: 03-04 std function.vcxproj  main.cpp
V2CPSE2-msvc-01/03-05 capture/: 03-05 capture.vcxproj  main.cpp
V2CPSE2-msvc-01/03-06 capture this/: 03-06 capture this.vcxproj  ReadMe.txt  main.cpp
V2CPSE2-msvc-01/03-07 lambda undefined behaviour/: 03-07 lambda undefined behaviour.vcxproj  main.cpp
V2CPSE2-msvc-01/03-08 array of actions/: 03-08 array of actions.vcxproj  03-08 array of actions.vcxproj.filters  ball.cpp  ball.hpp  main.cpp
assignments/week2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main
assignments/week2/project/: CMakeLists.txt  action.hpp  ball.cpp  ball.hpp  block.cpp  block.hpp  drawable.hpp  main.cpp  wall.cpp  wall.hpp
assignments/week3/: Makefile  main
assignments/week3/project/: CMakeLists.txt  action.hpp  circle.cpp  circle.hpp  color.hpp  drawable.hpp  exception.hpp  line.cpp  line.hpp  main.cpp  objectInput.txt  objectOutput.txt  objects.txt  picture.cpp  picture.hpp  rectangle.cpp  rectangle.hpp
assignments/week4/: Makefile  main
assignments/week4/project/: CMakeLists.txt  exception.hpp  main.cpp
assignments/week5/: Makefile  main
assignments/week5/project/: CMakeLists.txt  block.cpp  block.hpp  drawable.hpp  game.cpp  game.hpp  main.cpp  picture.cpp  picture.hpp  turn.hpp
project/: .clang-format
test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
